--- a/style.css
+++ b/style.css
@@ -51,22 +51,23 @@ hr {
         top blogs
  ------------------------------------ */
 
- .blogs{
+
+.blogs {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-row-gap: 26px;
- }
-.blog{
+}
+.blog {
   display: flex;
 }
-.top-blog-text{
+.top-blog-text {
   margin-top: 30px;
 }
 .thumnail img {
   width: 224px;
   height: 127px;
 }
-.blog-tittle{
+.blog-tittle {
   padding-left: 19px;
 }
 .blog-Heading {
@@ -77,7 +78,6 @@ hr {
   font-weight: 500;
   line-height: 34px;
   margin: 0px;
-  
 }
 
 .blog-author {
@@ -86,10 +86,57 @@ hr {
   font-style: normal;
   font-weight: 400;
   margin: 0px;
-  
 }
-.blog-author a{
+.blog-author a {
   text-decoration: none;
-  color: #562EFF;
+  color: #562eff;
 }
 
+/*-----------------------------------------------------------
+                   Course Details 
+--------------------------------------------------------------*/
+ .courses{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-column-gap: 30px;
+ }
+ .course{
+  width: 270px;
+  height: 269.786px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+ }
+.course .course-baner img {
+  width: 266px;
+  height: 141px;
+  padding-left: 2px;
+  padding-top: 3px;
+}
+.course-details{
+  padding: 7px;
+}
+.course-info{
+  display: flex;
+  justify-content: space-between;
+}
+.fa-star.field{
+  color: #FFC014;
+  font-size: 12px;
+}
+.fa-star.empty{
+  color: #AEAEAE;
+  font-size: 12px;
+}
+
+.course-time{
+  display: flex;
+  align-items: center;
+  height: 30px;
+  margin-left: 2px;
+  background-color: rgb(233, 129, 129);
+  border-radius: 30px;
+  padding: 0 5px;
+}
+.time-set{
+  margin-left: 10px;
+}
